--- a/styles/article/blocks/media/image.scss
+++ b/styles/article/blocks/media/image.scss
@@ -49,7 +49,15 @@
   border-radius: 6px;
   overflow: hidden;
 
+  height: 100%;
+
+  &--blured {
+    filter: blur(5px);
+  }
+
   img {
+    min-height: 100%;
+
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
