project-card image styles changed

--- a/styles/components/projects/project-card.scss
+++ b/styles/components/projects/project-card.scss
@@ -31,6 +31,9 @@
       width: 100%;
 
       min-height: 250px;
+      @media screen and (max-width: 350px) {
+        min-height: 200px;
+      }
     }
   }
 
